exercise11/bonkey-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonkey
  namespace: bonkey-app
  labels:
    app: bonkey
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bonkey
  template:
    metadata:
      labels:
        app: bonkey
        version: v1
    spec:
      containers:
        - name: bonkey-container
          image: bonkey-k8s:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "5m"
              memory: "10Mi"
            requests:
              cpu: "1m"
              memory: "5Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 1
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 1
            periodSeconds: 1
